compiler/tools/fpp-check/test/redef/module_state_machine.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/redef/module_state_machine.fpp:3.5
    state machine A
    ^
error: redefinition of symbol A
previous definition is here:
[ local path prefix ]/compiler/tools/fpp-check/test/redef/module_state_machine.fpp:2.5
    state machine A
    ^
